# lilt

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: codecov.yml  rust.yml
examples/gpui-example/: Cargo.toml
examples/gpui-example/src/: main.rs  main_macos.rs
examples/iced-demo/: Cargo.toml
examples/iced-demo/src/: main.rs
examples/iced-indicator/: Cargo.toml
examples/iced-indicator/src/: main.rs
examples/iced-minimal/: Cargo.toml
examples/iced-minimal/src/: main.rs
examples/iced/src/: main.rs
src/: animated.rs  animation.rs  animator.rs  lib.rs  traits.rs
