[package]
name = "lilt"
version = "0.0.3"
edition = "2021"
description = "A simple, dependency free library for running interruptable, transition based animations as a function of time."
repository = "https://github.com/ejjonny/lilt"
license = "MIT"
keywords = ["animation", "interpolation"]
authors = ["ejjonny"]

[lib]
crate-type = ["lib"]

[[example]]
name = "iced-minimal"
path = "examples/iced-minimal/src/main.rs"

[[example]]
name = "iced-demo"
path = "examples/iced-demo/src/main.rs"

[dev-dependencies]
iced = "0.12.1"
