[package]
name = "lilt"
version = "0.4.0"
edition = "2021"
description = "A simple, dependency free library for running interruptable, transition based animations as a function of time."
repository = "https://github.com/ejjonny/lilt"
license = "MIT"
keywords = ["animation", "interpolation"]
authors = ["ejjonny"]

[lib]
crate-type = ["lib"]

[[example]]
name = "iced-minimal"
path = "examples/iced-minimal/src/main.rs"

[[example]]
name = "iced-demo"
path = "examples/iced-demo/src/main.rs"

[dev-dependencies]
iced = { branch = "master", git = "https://github.com/iced-rs/iced", features = [
    "canvas",
] }
